# wit-unimelb

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  fly.toml  notes.txt  pyproject.toml
deploy/: README.md
deploy/scripts/: deploy-railway.sh
src/chico/llmgine/: README.md  discord_engine.py  humanitix_tools.py
src/chico/programs/: humanitix_helper.py  llmgine_discord_bot.py  test_llmgine_cli.py
src/chico/tools/: humanitix.py
src/database/bronze/src/DDL/: members.sql
