[project]
name = "wit-unimelb"
version = "0.1.0"
description = "WIT Unimelb project"
authors = [
    {name = "WIT Unimelb Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "discord-py>=2.5.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chico", "src/dashboard", "src/database"]

[tool.uv]
dev-dependencies = []
